# emex_autosturktura

./: .gitignore  README.md  alembic.ini  cert.csr  cert.pem  certificate.crt  dockerfile  entrypoint.sh  key.pem  main.py  my_certificate.crt  my_ssh_key  my_ssh_key.pub  new3.txt  private.key  private_key.pem  pyproject.toml  rar.txt  request.csr  requirements.txt
alembic/: env.py
alembic/versions/: 2024_08_16_2354-6c7f0056b784_init.py  2024_08_17_0007-b06d3021258c_test.py  2024_08_18_1558-204dea88770b_add_title_in_filters.py  2024_08_19_1201-78f6f941b593_edit_parser_table.py  2024_08_22_1329-a36271268f6e_add_date_ban_proxy.py  2024_08_23_1949-019b3f0b5a7f_add_field_in_proxy.py  2024_08_23_2005-30a0dc36e937_add_field_in_proxy.py  2024_08_26_1338-3bf336ead59f_test2.py  2024_08_26_1338-7466ba0667ae_test.py  2024_08_26_1344-3afa45596784_init.py  2024_08_26_1356-944c47225287_init.py  2024_08_29_2250-3f6541bded6d_different_file_in_parser_saving.py  2024_08_31_1803-2b272960d33c_nullable_true.py  2024_09_05_1932-0a4481eb1f77_edit_parser.py  2024_09_05_1934-8cddb63cbbf3_edit_parser.py  2024_09_05_2327-f906c13633f8_add_nullable.py  2024_09_05_2329-f33b1e1e7d20_add_nullable.py  2024_09_06_0020-8afe553544ad_check_revision.py  2024_09_06_0022-8ba15696f861_check_revision.py  2024_09_07_1131-d555cc47d601_init.py  (+19 more)
app/: db.sqlite3  main.py
env/: pyvenv.cfg
parser/: custom_exception.py  data.txt  for_parser.py  main.py  new3.txt  new_proxy.txt  parser_megalodon.py  playwright_parse.py  proxy_editor.py  t.json  tasks.txt  test1.py  test_threadings_playwright_parser.py  threadings_playwright_parser.py
rabbish/: async_test.py  proxy.txt  t.txt  test.json  test.py  version10.py
(+395 files in other folders)
