[tool.poetry]
name = "emex-autosturktura"
version = "0.1.0"
description = "parser plus api for autostruktura"
authors = ["margincode"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
