[tool.poetry]
name = "emex-autosturktura"
version = "0.1.0"
description = "parser plus api for autostruktura"
authors = ["margincode"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.45.0"
requests = "^2.32.3"
aiohttp = "^3.9.5"
fastapi = "^0.112.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.3.4"
aiosqlite = "^0.20.0"
email-validator = "^2.2.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.2.0"
python-multipart = "^0.0.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.2"
pytest = "^8.3.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"
websockets = "^12.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
